--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ sysinfo.txt
 /Library
 /Assets/UnityVS.meta
 /Assets/UnityVS
+Assets/scripts/hotspots/TestSpot.cs
+Assets/scripts/hotspots/TestSpot.cs.meta
